--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./story_set.css" />
     <title>Etch-a-Sketch</title>
   </head>
   <body>
@@ -14,26 +13,129 @@
     </header>
     <main>
       <div class="slider">
-        <div class="slider__detail">10 x 10 Squares</div>
+        <div class="slider__detail"><span class="count">10 x 10 = 100</span> Squares</div>
         <input class="slider__input" type="range" min="1" max="64" step="1" value="10" />
       </div>
-      <div class="hover"></div>
+
+      <div class="hover">
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+        <div class="hover__small"></div>
+      </div>
+
       <div class="option">
-        <div class="option__info">rgb(255, 255, 255)</div>
+        <div class="option__info">rgb (255, 255, 255)</div>
         <div class="option__each option__color">
           <div class="option__text">Color</div>
           <input class="option__inp" type="color" name="" id="">
         </div>
-        <div class="option__each option__color">
+        <div class="option__each option__Gray">
           <div class="option__text">Gray Tone</div>
         </div>
-        <div class="option__each option__color">
+        <div class="option__each option__random">
           <div class="option__text">Colorize</div>
         </div>
-        <div class="option__each option__color">
+        <div class="option__each option__invert">
           <div class="option__text">Invert</div>
         </div>
-        <div class="option__each option__color">
+        <div class="option__each option__border">
           <div class="option__text">Toggle Border</div>
         </div>
       </div>
