Add gray and random color function

--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
         <div class="hover__small"></div>
       </div>
 
-      <div class="option">
+      <div class="option" data-value="random">
         <div class="option__info">rgb (255, 255, 255)</div>
-        <div class="option__each option__color">
+        <div class="option__each option__color" data-id="0">
           <div class="option__text">Color</div>
-          <input class="option__inp" type="color" name="" id="">
+          <input class="option__inp" type="color" name="" id="Color">
         </div>
-        <div class="option__each option__Gray">
+        <div class="option__each option__Gray" data-value="gray" data-id="1">
           <div class="option__text">Gray Tone</div>
         </div>
-        <div class="option__each option__random">
+        <div class="option__each option__random active" data-value="random" data-id="2">
           <div class="option__text">Colorize</div>
         </div>
-        <div class="option__each option__invert">
+        <div class="option__each option__invert" data-value="invert" data-id="3">
           <div class="option__text">Invert</div>
         </div>
         <div class="option__each option__border">
